--- a/modal.css
+++ b/modal.css
@@ -14,7 +14,6 @@ body {
   margin: 0;
   display: flex;
   flex-direction: column;
-  background-image: url("background.png");
   font-family: var(--font-default);
   font-size: 18px;
   max-width: 1300px;
@@ -32,24 +31,75 @@ img {
 
 .topnav {
   overflow: hidden;
-  margin: 3.5%;
+  margin: 15px 30px 15px 30px;
+}
+
+@media (min-width: 992px) {
+  .topnav {
+    margin: 3.5% 0 3.5% 3.5%;
+  }
 }
 .header-logo {
-    float: left;
+  float: left;
+  padding: 15px 0px;
 }
+
+.header-logo img {
+  width: 30vw;
+}
+
+@media (min-width: 768px) and (max-width: 991.98px) {
+  .header-logo img {
+    width: 22vw;
+  }
+}
+@media (min-width: 992px) {
+  .header-logo img {
+    width: auto;
+  }
+}
+
 .main-navbar {
-    float: right;
+  float: right;
+  width: 100%;
+  margin-top: -54px;
 }
+
+@media (min-width: 768px) and (max-width: 991.98px) {
+  .main-navbar {
+    margin-top: -66px;
+  }
+}
+@media (min-width: 992px) {
+  .main-navbar {
+    width: auto;
+    margin-top: 18px;
+  }
+}
+
 .topnav a {
   float: left;
-  display: block;
-  color: #000000;
+  display: none;
+  color: #ff0000;
   text-align: center;
-  padding: 12px 12px;
-  margin: 5px;
+  padding: 12px;
   text-decoration: none;
   font-size: 20px;
   font-family: Roboto, sans-serif;
+}
+
+.topnav a.icon {
+  float: right;
+  display: block;
+}
+
+@media (min-width: 992px) {
+  .topnav a {
+    display: block;
+  }
+  .topnav a.icon {
+    display: none;
+  }
 }
 
 .topnav a:hover {
@@ -64,40 +114,26 @@ img {
   border-radius: 15px;
 }
 
-.topnav .icon {
-  display: none;
+.topnav a.icon:hover {
+  background-color: red;
+  color: white;
 }
 
-@media screen and (max-width: 768px) {
-  .topnav a {display: none;}
-  .topnav a.icon {
-    float: right;
-    display: block;
-  }
+.topnav.responsive {
+  position: relative;
 }
 
-@media screen and (max-width: 768px) {
-  .topnav.responsive {position: relative;}
-  .topnav.responsive .icon {
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-  .topnav.responsive a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
+.topnav.responsive .icon {
+  position: absolute;
+  right: 0;
+  top: 0;
 }
 
-@media screen and (max-width: 540px) {
-  .topnav a {display: none;}
-  .topnav a.icon {
-    float: right;
-    display: block;
-    margin-top: -15px;
-  }
-} 
+.topnav.responsive a {
+  float: none;
+  display: block;
+  text-align: left;
+}
 
 main {
   font-size: 130%;
@@ -106,7 +142,7 @@ main {
   padding-top: 0.5vw;
   padding-left: 2vw;
   padding-right: 2vw;
-  margin: 1px 20px 15px;
+  margin: 0 20px;
   border-radius: 2rem;
   text-align: justify;
 }
@@ -177,7 +213,7 @@ main {
 }
 
 .content {
-  margin: 1vh auto;
+  margin: 8vh auto;
   width: 100%;
   max-width: 500px;
   animation-name: modalopen;
@@ -188,7 +224,13 @@ main {
   position: relative;
   color: #fff;
   padding-top: 10px;
-  min-height: 98vh;
+}
+
+@media (min-width: 992px) {
+  .content {
+    margin: 1vh auto;
+    min-height: 98vh;
+  }
 }
 
 .bground[closing],
@@ -198,21 +240,41 @@ main {
 }
 
 .modal-body {
-  padding: 15px 8%;
-  margin: 15px auto;
+  padding: 15px 6%;
+  margin: 0 auto;
+}
+
+@media (min-width: 992px) {
+  .modal-body {
+    margin: 15px auto;
+  }
 }
 
 .bground-merci .modal-body {
   position: relative;
-  top: 40vh;
+  top: 35vh;
+  height: 72vh;
+}
+
+@media (min-width: 992px) {
+  .bground-merci .modal-body {
+    top: 40vh;
+    height: 16vh;
+  }
 }
 
 label {
   font-family: var(--font-default);
-  font-size: 17px;
+  font-size: 50%;
   font-weight: normal;
   display: inline-block;
-  margin-bottom: 11px;
+  margin-bottom: 5px;
+}
+
+@media (min-width: 992px) {
+  label {
+    font-size: 16px;
+  }
 }
 
 input {
@@ -226,8 +288,15 @@ input {
   padding: 8px;
   width: 100%;
   border-radius: 8px;
-  font-size: 20px;
-  height: 48px;
+  font-size: 70%;
+  height: 40px;
+}
+
+@media (min-width: 992px) {
+  .text-control {
+    font-size: 20px;
+    height: 48px;
+  }
 }
 
 .formData[data-error]::after {
@@ -260,10 +329,19 @@ input[data-error]::after {
 .checkbox-label,
 .checkbox2-label {
   position: relative;
-  margin-left: 36px;
-  font-size: 12px;
+  margin-left: 30px;
+  font-size: 50%;
   font-weight: normal;
 }
+
+@media (min-width: 992px) {
+  .checkbox-label,
+  .checkbox2-label {
+    margin-left: 36px;
+    font-size: 15px;
+  }
+}
+
 .checkbox-label .checkbox-icon,
 .checkbox2-label .checkbox-icon {
   display: block;
@@ -278,6 +356,7 @@ input[data-error]::after {
   top: -1px;
   transition: 0.3s;
 }
+
 .checkbox-label .checkbox-icon::after,
 .checkbox2-label .checkbox-icon::after {
   content: "";
@@ -294,21 +373,26 @@ input[data-error]::after {
   transition: 0.3s;
   opacity: 0;
 }
+
 .checkbox-input {
   display: none;
 }
+
 .checkbox-input:checked + .checkbox-label .checkbox-icon::after,
 .checkbox-input:checked + .checkbox2-label .checkbox-icon::after {
   opacity: 1;
 }
+
 .checkbox-input:checked + .checkbox2-label .checkbox-icon {
   background: #279e7a;
 }
+
 .checkbox2-label .checkbox-icon {
   border-radius: 4px;
   border: 0;
   background: #c4c4c4;
 }
+
 .checkbox2-label .checkbox-icon::after {
   width: 7px;
   height: 4px;
@@ -321,6 +405,7 @@ input[data-error]::after {
   left: 21%;
   top: 19%;
 }
+
 .close,
 .close-merci {
   position: absolute;
@@ -332,6 +417,7 @@ input[data-error]::after {
   cursor: pointer;
   transform: scale(0.7);
 }
+
 .close:before,
 .close:after,
 .close-merci:before,
@@ -339,18 +425,30 @@ input[data-error]::after {
   position: absolute;
   left: 15px;
   content: " ";
-  height: 33px;
+  height: 25px;
   width: 3px;
   background-color: #fff;
 }
+
+@media (min-width: 992px) {
+  .close:before,
+  .close:after,
+  .close-merci:before,
+  .close-merci:after {
+    height: 33px;
+  }
+}
+
 .close:before,
 .close-merci:before {
   transform: rotate(45deg);
 }
+
 .close:after,
 .close-merci:after {
   transform: rotate(-45deg);
 }
+
 .btn-submit,
 .btn-signup,
 .btn-close {
@@ -367,7 +465,13 @@ input[data-error]::after {
 
 .btn-close {
   position: relative;
-  top: 68vh;
+}
+
+@media (min-width: 992px) {
+  .btn-close {
+    position: relative;
+    top: 68vh;
+  }
 }
 
 /* custom select styles */
@@ -436,31 +540,58 @@ input[data-error]::after {
 .same-as-selected {
   background-color: rgba(0, 0, 0, 0.1);
 }
+
 /* custom select end */
 .text-label {
   font-weight: normal;
-  font-size: 16px;
+  font-size: 50%;
+  margin-top: 5px;
 }
+
+@media (min-width: 992px) {
+  .text-label {
+    font-weight: normal;
+    font-size: 16px;
+  }
+}
+
 .hero-section {
-  min-height: 93vh;
   border-radius: 10px;
-  display: grid;
+  display: block;
   grid-template-columns: repeat(12, 1fr);
   overflow: hidden;
-  box-shadow: 0 2px 7px 2px rgba(0, 0, 0, 0.2);
+  box-shadow: unset;
   margin-bottom: 10px;
 }
+
+@media (min-width: 992px) {
+  .hero-section {
+    min-height: 93vh;
+    display: grid;
+    box-shadow: 0 2px 7px 2px rgba(0, 0, 0, 0.2);
+  }
+}
+
 .hero-content {
-  padding: 51px 67px;
+  padding: 0px;
   grid-column: span 4;
-  background: #232323;
-  color: #fff;
+  background: #fff;
+  color: #000;
   position: relative;
   text-align: left;
-  min-width: 424px;
 }
+
+@media (min-width: 992px) {
+  .hero-content {
+    padding: 51px 67px;
+    background: #232323;
+    color: #fff;
+    min-width: 424px;
+  }
+}
+
 .hero-content::after {
-  content: "";
+  content: unset;
   width: 100%;
   height: 100%;
   background: #232323;
@@ -468,21 +599,59 @@ input[data-error]::after {
   right: -80px;
   top: 0;
 }
+
+@media (min-width: 992px) {
+  .hero-content::after {
+    content: "";
+  }
+}
+
 .hero-content > * {
   position: relative;
   z-index: 1;
 }
+
 .hero-headline {
-  font-size: 6rem;
+  font-size: 2.4rem;
   font-weight: normal;
-  white-space: nowrap;
+  white-space: normal;
 }
+
+@media (min-width: 768px) and (max-width: 991.98px) {
+  .hero-headline {
+    font-size: 4rem;
+  }
+}
+
+@media (min-width: 992px) {
+  .hero-headline {
+    font-size: 6rem;
+    white-space: nowrap;
+  }
+}
+
 .hero-text {
-  width: 146%;
+  width: unset;
+  font-size: 0.8rem;
   font-weight: normal;
-  margin-top: 57px;
+  margin-top: 2vh;
   padding: 0;
 }
+
+@media (min-width: 768px) and (max-width: 991.98px) {
+  .hero-text {
+    font-size: 100%;
+  }
+}
+
+@media (min-width: 992px) {
+  .hero-text {
+    width: 146%;
+    font-size: inherit;
+    margin-top: 57px;
+  }
+}
+
 .btn-signup {
   outline: none;
   text-transform: capitalize;
@@ -491,66 +660,73 @@ input[data-error]::after {
   margin: 0;
   margin-top: 59px;
 }
+
+.hero-content .btn-signup {
+  display: none;
+}
+
+@media (min-width: 992px) {
+  .hero-content .btn-signup {
+    display: block;
+  }
+}
+
+.hero-section > .btn-signup {
+  display: block;
+  margin: 32px auto 10px;
+  padding: 12px 35px;
+}
+
+@media (min-width: 992px) {
+  .hero-section > .btn-signup {
+    display: none;
+  }
+}
+
 .hero-img {
   grid-column: span 8;
 }
+
 .hero-img img {
   width: 100%;
   height: 100%;
   display: block;
   padding: 0;
+  border-radius: 10px;
+  margin-top: 40px;
 }
+
+@media (min-width: 992px) {
+  .hero-img img {
+    border-radius: 0;
+    margin-top: 0;
+  }
+}
+
 .copyrights {
   color: #fe142f;
   padding: 0;
-  font-size: 1rem;
-  margin: 60px 0 30px;
+  font-size: 0.8rem;
+  text-align: center;
   font-weight: bolder;
 }
-.hero-section > .btn-signup {
-  display: none;
-}
-footer {
-  padding-left: 2vw;
-  padding-right: 2vw;
-  margin: 0 20px;
-}
-@media screen and (max-width: 800px) {
-  .hero-section {
-    display: block;
-    box-shadow: unset;
-  }
-  .hero-content {
-    background: #fff;
-    color: #000;
-    padding: 20px;
-  }
-  .hero-content::after {
-    content: unset;
-  }
-  .hero-content .btn-signup {
-    display: none;
-  }
-  .hero-headline {
-    font-size: 4.5rem;
-    white-space: normal;
-  }
-  .hero-text {
-    width: unset;
-    font-size: 1.5rem;
-  }
-  .hero-img img {
-    border-radius: 10px;
-    margin-top: 40px;
-  }
-  .hero-section > .btn-signup {
-    display: block;
-    margin: 32px auto 10px;
-    padding: 12px 35px;
-  }
+
+@media (min-width: 992px) {
   .copyrights {
+    font-size: 1rem;
+    margin: 60px 0 30px;
+    text-align: left;
     margin-top: 50px;
-    text-align: center;
+  }
+}
+
+footer {
+  padding: 3vw 0 5vw 0;
+}
+
+@media (min-width: 992px) {
+  footer {
+    padding: 0;
   }
 }
 
